# sockpipe

./: .gitignore  CMakeLists.txt  README.md  checklist.txt
include/sockpipe/: alloc.h  application.h  blackhole.h  echo.h  interface.h  ip_protocol.h  joint.h  list.h  log.h  magic.h  nullable.h  object.h  packet.h  queue.h  tags.h  udp_port.h
src/: CMakeLists.txt  alloc.c  application.c  blackhole.c  echo.c  list.c  log.c  log.txt  main.c  object.c  packet.c  queue.c  udp_port.c
